Implemented the new issuance api for credissuer integration.
